# lib_camera

./: .gitignore  .gitmodules  CHANGELOG.rst  CMakeLists.txt  Jenkinsfile  LICENSE.rst  README.md  README.rst  TODO  build_opts.cmake  clean_build.sh  common.cmake  index.rst  launch_cmake.sh  lib_camera.cmake  pytest.ini  requirements.txt  settings.json  settings.yml
camera/: CMakeLists.txt  isp.c  isp.h  lib_build_info.cmake  stadistics.c  stadistics.h  statistics.c  statistics.h  utils.h
camera/api/: MipiPacketRx_simulate.h  aux_isph  camera.h  camera_api.h  camera_main.h  camera_process.h  camera_utils.h  image_hfilter.h  image_vfilter.h  isp.h  isp_pipeline.h  packet_handler.h  statistics.h  stats.h  user_api.h  utils.h  xcore_compat.h  yuv_rgb.h
camera/api/cpp/: image_downsampler.hpp  image_hfilter.hpp  image_vfilter.hpp  packet_handler.hpp
camera/asm/: rgb_to_yuv.S  yuv_to_rgb.S
camera/src/: MipiPacketRx_simulate.c  aux_new_ispc  camera.xc  camera_api.c  camera_main.c  camera_main.xc  camera_process.xc  camera_utils.c  image_hfilter.c  image_vfilter.c  isp.c  isp_functions.c  isp_pipeline.c  packet_handler.c  packet_handler.cpp  statistics.c  statisticsc  stats.c  user_api.c  utils.c
camera/src/asm/: pixel_hfilter.S  pixel_vfilter_acc_init.S  pixel_vfilter_complete.S  pixel_vfilter_macc.S  rgb_to_yuv.S  yuv_to_rgb.S
examples/: CMakeLists.txt  README.rst  build_examples.py  config.xscope  examples.cmake
examples/blink_example/: blink_example.cmake
examples/blink_example/src/: main.c
examples/capture_raw/: CMakeLists.txt  README.rst  XCORE-VISION-EXPLORER.xn  _run.py  decode.py  decoderaw8.py
examples/capture_raw/src/: mapfile.xc  user_app.c
examples/capture_rgb/: CMakeLists.txt  README.rst  capture1.rgb  decode.py
examples/capture_rgb/src/: mapfile.xc  user_app.c
examples/common/: camera_io_utils.c  camera_io_utils.h  packet_rx_simulate.c
examples/i2c_simple_read/: CMakeLists.txt  README.rst
examples/i2c_simple_read/src/: cam_i2c.c  cam_i2c.h  common.h  defines.h  imx219_reg.h  main.xc
examples/minimal/: CMakeLists.txt  README.rst  config.xscope
examples/minimal/src/: mapfile.xc  user_app.c  user_camera.c
examples/simple_timing/: CMakeLists.txt  README.md  simple_timing.cmake
examples/simple_timing/src/: config.xscope  main.xc  mipi_main.xc  mipi_timing.h  mipi_timing.xc  process_frame.h
examples/take_picture/: CMakeLists.txt  take_picture.cmake
examples/take_picture/src/: a_main.xc  extmem_data.c  extmem_data.h  main.c  main.cpp  main.h  main.hpp  main.xc  mipi_main.h  mipi_main.xc  old_mipi_main  process_frame.c  process_frame.h
examples/take_picture_RGB/: take_picture_RGB.cmake
examples/take_picture_RGB/src/: mipi_main.xc  process_frame.c
examples/take_picture__local/src/: app.c  main.xc
examples/take_picture_downsample/: CMakeLists.txt  README.rst
examples/take_picture_downsample/src/: app.c  app.h  main.xc
examples/take_picture_dynamic/: CMakeLists.txt  take_picture_dynamic.cmake
examples/take_picture_dynamic/src/: mipi_main.h  mipi_main.xc  process_frame.c  process_frame.h
examples/take_picture_dynamic_crop/: CMakeLists.txt  take_picture_dynamic_crop.cmake
examples/take_picture_dynamic_crop/src/: mipi_main.h  mipi_main.xc  process_frame.c
examples/take_picture_local/: CMakeLists.txt  README.rst
examples/take_picture_local/src/: app.c  app.h  main.xc
examples/take_picture_raw/: CMakeLists.txt  README.md  README.rst
examples/take_picture_raw copy/: CMakeLists.txt
examples/take_picture_raw copy/src/: app_raw.c  main.xc
examples/take_picture_raw/src/: app_raw.c  app_raw.h  main.xc  mipi_main.h  mipi_main.xc  process_frame.c
examples/take_picture_rgb/: XCORE-AI-EXPLORER.xn  take_picture.cmake  take_picture_rgb.cmake
examples/take_picture_rgb/src/: image.h  main.xc  mipi_main.h  mipi_main.xc  process_frame.c  process_frame.h
external_deps/: CMakeLists.txt  fetch_deps.cmake
external_deps/fwk_io/: CMakeLists.txt
modules/mipi/: CMakeLists.txt  README.md  lib_build_info.cmake
modules/mipi/api/: mipi.h  mipi_defines.h
modules/mipi/src/: MipiPacketRx.S  MipiPacketRx.c  MipiPacketRx.xc  MipiPacketRx_sim.c
sensors/: CMakeLists.txt  gc2145.h  gc2145.xc  gc2145_setup.xc  imx219.h  imx219.xc  imx219_reg.h  lib_build_info.cmake  sensor_control.xc
sensors/_galaxycore_gc2145/: gc2145.h  gc2145.xc
sensors/_sony_imx219/: imx219.c  imx219.cpp  imx219.h  imx219.hpp  imx219.xc  imx219_i2c.h  imx219_i2c.xc  imx219_reg.h
sensors/api/: SensorBase.hpp  sensor.c  sensor.h  sensor_control.h  sensor_defs.h  sensor_settings.h  sensors.h
sensors/galaxycore_gc2145/: gc2145_setup.xc  readme.rst
sensors/src/: SensorBase.cpp  sensor_control.c  sensor_control.cpp  sensor_control.xc
sensors/src/_other_sensor/: README.rst
sensors/src/_sony_imx219/: imx219.c  imx219.cpp  imx219.h  imx219.hpp  imx219_reg.h
tests/hardware_tests/test_timing/: CMakeLists.txt  README.rst
tests/hardware_tests/test_timing/src/: MipiGatherTiming.S  app.c  app.h  app.xc  main.xc
tests/isp/: .gitignore  CMakeLists.txt  README.rst  conftest.py  decode.py  kernels.py  test_isp.py  test_rgb.py  test_rgb1.py  test_rgb2.py  test_rgb4.py  test_swb.py  test_utils.py  test_yuv.py  utils.py
tests/isp/imgs/: _blue.raw  _green.raw  _red.raw  capture0_int8.raw  capture1_int8.raw  capture2_int8.raw
tests/isp/src/: main.c  test_rgb.c  test_rgb1.c  test_rgb2.c  test_rgb4.c  test_swb.c  test_yuv.c
tests/unit_test_camera/: CMakeLists.txt
tests/unit_test_camera/src/: test_isp.c
tests/unit_tests/: CMakeLists.txt
tests/unit_tests/api/: _helpers.h
tests/unit_tests/src/: config.xscope  helpers.c  helpers.h  main.c  test_isp.c  test_isp.h  unity_config.h
tests/unit_tests/src/test/: ImageHFilter_test.cpp  _helper.c  _helper.h  _helpers.c  color_conversion_test.c  crop_function_test.c  gamma_timing_test.c  (+13 more)
utils/: CMakeLists.txt  README.rst  lib_build_info.cmake  xscope_fileio.cmake  xscope_fileio_guide.rst
utils/common_utils/: utils.c  utils.h  utils_new.h
utils/io_utils/: io_utils.c  io_utils.h  packet_rx_simulate.c  packet_rx_simulate.h
(+254 files in other folders)
